--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head><title>www_youtube_com</title></head>
+<body>
 <frameset cols="20%,80%">
     <frame src="menu.html"></frame>
     <frame src="del.html"></frame>
 </frameset>
+</body>
+</html>
